Fix alignment of text and buttons in cookie banner
Also simplifies the inline button CSS as it was getting overcomplicated. Makes the inline button styles more generic, so the button can be styled specifically for the cookie banner in the cookie banner css

govuk-buttons has a style of vertical-align: top which was making it difficult to align the buttons and the text in the cookie banner. Overriding this with vertical-align: baseline fixes this problem

--- a/app/assets/stylesheets/govuk_publishing_components/components/_button.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_button.scss
@@ -24,16 +24,14 @@ $gem-quiet-button-hover-colour: darken($gem-quiet-button-colour, 5%);
 
 .gem-c-button--inline {
   display: block;
+  width: 100%;
   margin-bottom: govuk-spacing(1);
-
-  @include govuk-media-query($from: mobile) {
-    @include box-sizing(border-box);
-    display: inline-block;
-    width: 48%;
-  }
+  vertical-align: top;
 
   @include govuk-media-query($from: desktop) {
+    display: inline-block;
     width: auto;
+    vertical-align: baseline;
   }
 }
 
